WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138275
Fix the specificity of the extended :not() selector
https://bugs.webkit.org/show_bug.cgi?id=138275
Summary
Fix the specificity of the extended :not() selector
Benjamin Poulain
Reported
2014-10-31 20:48:02 PDT
Fix the specificity of the extended :not() selector
Attachments
Patch
(31.38 KB, patch)
2014-10-31 21:02 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-10-31 21:02:33 PDT
Created
attachment 240780
[details]
Patch
Andreas Kling
Comment 2
2014-11-01 10:49:01 PDT
Comment on
attachment 240780
[details]
Patch r=me
Benjamin Poulain
Comment 3
2014-11-01 11:11:05 PDT
Comment on
attachment 240780
[details]
Patch Clearing flags on attachment: 240780 Committed
r175453
: <
http://trac.webkit.org/changeset/175453
>
Benjamin Poulain
Comment 4
2014-11-01 11:11:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug